--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "gulp-minify-html": "~1.0.6",
     "gulp-ng-annotate": "~1.0.0",
     "gulp-ng-config": "~1.2.1",
-    "gulp-protractor": "~4.0.0",
+    "gulp-protractor": "^4.1.1",
     "gulp-rename": "~1.2.0",
     "gulp-replace": "~0.5.0",
     "gulp-rev": "~2.0.1",
@@ -71,7 +71,6 @@
     "jasmine-core": "^2.5.2",
     "jshint": "~2.9.4",
     "jshint-stylish": "~1.0.0",
-    "mdPickers": "^0.7.5",
     "protractor": "~5.1.1",
     "require-dir": "~0.1.0",
     "uglify-save-license": "~0.4.1",
